--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -2,9 +2,29 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">We've got what you need!</h2>
-                <hr class="light">
-                <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                <p class="text-faded">Se eu fosse resumir minha ideia sobre o que é o movimento maker em uma frase: 
+
+É o movimento que tem o potencial de fazer qualquer um fazer (quase) qualquer coisa por meio do acesso a ferramentas, materiais, técnicas e, principalmente, </b>A<\b> informação certa. 
+
+E esse último ponto é o mais importante. 
+
+Hoje em dia o que não falta é informação sobre o incrível mundo maker nas internets...a grande questão é achar A informação relevante no meio de tanta coisa!
+
+Em minhas palestras, especialmente para executivos, falo sobre o quanto é importante errar, e errar rápido e barato. Quanto mais planejamos e teorizamos antes de prototipar rapidamente e colocar a mão na massa, maior a chance de termos problemas no projeto e gastarmos tempo e/ou dinheiro a toa.  
+
+Nos últimos sete anos eu participei de diversos projetos nesse mundo e pude errar bastante. Durante essa jornada colecionei informações valiosas sobre os mais diversos assuntos: projetos para escolas, impressão 3D, máquinas e afins, projetos DIY de final de semana, biohacking, componentes eletrônicos, teoria, lojas, laboratórios, makerspaces, ideias para workshops, enfim...(quase) TUDO o que pode imaginar relacionado ao mundo maker eu já fiz (ou tenho o telefone de quem já fez).
+
+Hoje me liguei que essa seleção foi uma grande - e trabalhosa - curadoria, que poderia adiantar a vida de muita gente. É importante errar para aprendermos com a própria experiência, mas não precisamos cometer os mesmos erros básicos que os outros (nesse caso EU) já cometeram, certo?
+
+Pensando nisso, organizei esse material que chamei brincando de "O Grande Livro dos Erros Makers". Através dele você vai poder ter novas ideias, achar as informações que precisa e pular umas casas no jogo, ficando livre para aprender cometendo seus próprios erros.
+
+
+
+Eu dividi tudo por assunto (são mais de 20!) e por nível de complexidade: Padawan, Cavaleiro, Mestre e Yoda, para mantermos a nerdice, sempre.
+
+
+
+Seja um iniciado ou iniciante, esse é o atalho que vai fazer você economizar seu dinheiro e seu tempo (que hoje vale mais do que dinheiro!). Bora acessar?</p>
                 <a href="#" class="btn btn-default btn-xl">Get Started!</a>
             </div>
         </div>
