--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -2,9 +2,11 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <p class="text-faded">Se eu fosse resumir minha ideia sobre o que é o movimento maker em uma frase: 
+                <p class="text-faded">Se eu fosse resumir minha ideia sobre o que é o movimento maker em uma frase:
 
-É o movimento que tem o potencial de fazer qualquer um fazer (quase) qualquer coisa por meio do acesso a ferramentas, materiais, técnicas e, principalmente, </b>A<\b> informação certa. 
+ 
+
+É o movimento que tem o potencial de fazer qualquer um fazer (quase) qualquer coisa por meio do acesso a ferramentas, materiais, técnicas e, principalmente, **A** informação certa. 
 
 E esse último ponto é o mais importante. 
 
