--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-left">
-                <p class="text-faded">Se eu fosse resumir minha ideia sobre o que é o movimento maker em uma frase:<p>
+                <p>Se eu fosse resumir minha ideia sobre o que é o movimento maker em uma frase:<p>
               É o movimento que tem o potencial de fazer qualquer um fazer (quase) qualquer coisa por meio do acesso a ferramentas, materiais, técnicas e, principalmente, <strong>A</strong> informação certa. <p>
 E esse último ponto é o mais importante. <p>
 
