--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-left">
                 <p>Se eu fosse resumir minha ideia sobre o que é o movimento maker em uma frase:<p>
-              É o movimento que tem o potencial de fazer qualquer um fazer (quase) qualquer coisa por meio do acesso a ferramentas, materiais, técnicas e, principalmente, <strong>A</strong> informação certa. <p>
+              É o potencial de qualquer um fazer (quase) qualquer coisa por meio do acesso a ferramentas, materiais, técnicas e, principalmente, <strong>A</strong> informação certa. <p>
 E esse último ponto é o mais importante. <p>
 
 Hoje em dia o que não falta é informação sobre o incrível mundo maker nas internets...a grande questão é achar A informação relevante no meio de tanta coisa!<p>
