--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -19,7 +19,7 @@ Pensando nisso, organizei esse material que chamei brincando de "O Grande Livro 
 Eu dividi tudo por assunto (são mais de 20!) e por nível de complexidade: Padawan, Cavaleiro, Mestre e Yoda, para mantermos a nerdice, sempre.<p>
 
 Seja um iniciado ou iniciante, esse é o atalho que vai fazer você economizar seu dinheiro e seu tempo (que hoje vale mais do que dinheiro!). Bora acessar?</p>
-                <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+                <a href="#" class="btn btn-default btn-xl">Acesse agora!</a>
             </div>
         </div>
     </div>
