--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -6,6 +6,7 @@
 <body id="page-top">
   {% include header.html %}
   {% include call-to-action.html %}
+  {% include header2.html %}
   {% include services.html %}
   {% include portfolio.html %}
   {% include aside.html %}
