--- a/_includes/header2.html
+++ b/_includes/header2.html
@@ -1,6 +1,6 @@
-<header>
+<header2>
     <div class="header-content">
         <div class="header-content-inner">
         </div>
     </div>
-</header>
+</header2>
